Adding bower install to the postinstall script to get the bower dependencies sorted in Heroku

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "wiredep": "^2.0.0"
   },
   "scripts": {
-    "postinstall": "gulp default"
+    "postinstall": "bower install; gulp default"
   }
 }
